bin/tests/snapshots/devenv_pre_commit__1b5d9c8cecf46e218e928a3b5493a28e_fix.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ config.pre-commit.hooks.shellcheck.enable = true; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ config.pre-commit.hooks.shellcheck.enable = true; }
+{ config.git-hooks.hooks.shellcheck.enable = true; }
