bin/tests/snapshots/devenv_pre_commit__1b5d9c8cecf46e218e928a3b5493a28e_lint_errfmt.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ config.pre-commit.hooks.shellcheck.enable = true; }
---
<temp_file_path>>1:10:W:25:[devenv_pre_commit] `pre-commit` is deprecated in devenv, use `git-hooks`
