bin/tests/snapshots/devenv_pre_commit__1b5d9c8cecf46e218e928a3b5493a28e_lint_json.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ config.pre-commit.hooks.shellcheck.enable = true; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "devenv_pre_commit",
      "note": "Found deprecated devenv option `pre-commit`",
      "code": 25,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 10
            },
            "to": {
              "line": 1,
              "column": 20
            }
          },
          "message": "`pre-commit` is deprecated in devenv, use `git-hooks`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 10
              },
              "to": {
                "line": 1,
                "column": 20
              }
            },
            "fix": "git-hooks"
          },
          "fixable": true
        }
      ]
    }
  ]
}
