bin/tests/snapshots/devenv_pre_commit__1b5d9c8cecf46e218e928a3b5493a28e_lint_stderr.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ config.pre-commit.hooks.shellcheck.enable = true; }
---
[devenv_pre_commit] Warning: Found deprecated devenv option `pre-commit`
   ╭─[ <temp_file_path>:1:10 ]
   │
 1 │ { config.pre-commit.hooks.shellcheck.enable = true; }
   │          ─────┬────  
   │               ╰────── pre-commit is deprecated in devenv, use git-hooks
───╯
