bin/tests/snapshots/devenv_pre_commit__66e901e6d32176ae34655867f759385c_fix.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit.hooks.shellcheck.enable = true; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ pre-commit.hooks.shellcheck.enable = true; }
+{ git-hooks.hooks.shellcheck.enable = true; }
