bin/tests/snapshots/devenv_pre_commit__66e901e6d32176ae34655867f759385c_lint_errfmt.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit.hooks.shellcheck.enable = true; }
---
<temp_file_path>>1:3:W:25:[devenv_pre_commit] `pre-commit` is deprecated in devenv, use `git-hooks`
