bin/tests/snapshots/devenv_pre_commit__66e901e6d32176ae34655867f759385c_lint_stderr.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit.hooks.shellcheck.enable = true; }
---
[devenv_pre_commit] Warning: Found deprecated devenv option `pre-commit`
   ╭─[ <temp_file_path>:1:3 ]
   │
 1 │ { pre-commit.hooks.shellcheck.enable = true; }
   │   ─────┬────  
   │        ╰────── pre-commit is deprecated in devenv, use git-hooks
───╯
