bin/tests/snapshots/devenv_pre_commit__87d96a3ab8ac8ababcfc7c284c6f1312_fix.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit = { hooks.nixfmt.enable = true; }; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-{ pre-commit = { hooks.nixfmt.enable = true; }; }
+{ git-hooks = { hooks.nixfmt.enable = true; }; }
