bin/tests/snapshots/devenv_pre_commit__87d96a3ab8ac8ababcfc7c284c6f1312_lint_errfmt.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit = { hooks.nixfmt.enable = true; }; }
---
<temp_file_path>>1:3:W:25:[devenv_pre_commit] `pre-commit` is deprecated in devenv, use `git-hooks`
