bin/tests/snapshots/devenv_pre_commit__87d96a3ab8ac8ababcfc7c284c6f1312_lint_json.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit = { hooks.nixfmt.enable = true; }; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "devenv_pre_commit",
      "note": "Found deprecated devenv option `pre-commit`",
      "code": 25,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 3
            },
            "to": {
              "line": 1,
              "column": 13
            }
          },
          "message": "`pre-commit` is deprecated in devenv, use `git-hooks`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 3
              },
              "to": {
                "line": 1,
                "column": 13
              }
            },
            "fix": "git-hooks"
          },
          "fixable": true
        }
      ]
    }
  ]
}
