bin/tests/snapshots/devenv_pre_commit__87d96a3ab8ac8ababcfc7c284c6f1312_lint_stderr.snap
---
source: bin/tests/devenv_pre_commit.rs
---
{ pre-commit = { hooks.nixfmt.enable = true; }; }
---
[devenv_pre_commit] Warning: Found deprecated devenv option `pre-commit`
   ╭─[ <temp_file_path>:1:3 ]
   │
 1 │ { pre-commit = { hooks.nixfmt.enable = true; }; }
   │   ─────┬────  
   │        ╰────── pre-commit is deprecated in devenv, use git-hooks
───╯
